@@ -48,20 +48,30 @@ check_data (void)
     { "0",   10, "0", 1 },
 
     { "abc", 10, "0", 0 },
+    { "0xf", 10, "0", 1 },
     { "ghi", 16, "0", 0 },
+    { "100", 90, "0", 0 },
 
     {  "ff", 16,  "255", 2 },
     { "-ff", 16, "-255", 3 },
     {  "FF", 16,  "255", 2 },
     { "-FF", 16, "-255", 3 },
 
-    { "z", 36, "35", 1 },
-    { "Z", 36, "35", 1 },
+    {  "z", 36, "35", 1 },
+    {  "Z", 36, "35", 1 },
+    { "1B", 59, "70", 2 },
+    {  "a", 60, "36", 1 },
+    {  "A", 61, "10", 1 },
 
     {  "0x0",    0,   "0", 3 },
-    {  "0x10",   0,  "16", 4 },
-    { "-0x0",    0,   "0", 4 },
+    {  "0X10",   0,  "16", 4 },
+    { "-0X0",    0,   "0", 4 },
     { "-0x10",   0, "-16", 5 },
+
+    {  "0b0",    0,  "0", 3 },
+    {  "0B10",   0,  "2", 4 },
+    { "-0B0",    0,  "0", 4 },
+    { "-0b10",   0, "-2", 5 },
 
     {  "00",   0,  "0", 2 },
     {  "010",  0,  "8", 3 },
@@ -70,6 +80,7 @@ check_data (void)
 
     {  "0x",     0,   "0", 2 },
     {  "0",      0,   "0", 1 },
+    { " 030",   10,  "30", 4 },
   };
 
   mpz_t  got, want;
